--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
     <meta charset="UTF-8">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
@@ -115,7 +115,7 @@
                                                 <tr>
                                                     <td class="text-muted">Age</td>
                                                     <td>:</td>
-                                                    <td>28 Years Old</td>
+                                                    <td>36 Years Old</td>
                                                 </tr>
                                                  <tr>
                                                     <td class="text-muted">Number</td>
@@ -178,19 +178,14 @@
 
          <div class="nine columns main-col">
 
+          <h1 class=" mx-3 text-center"> EDUCATION </h1>
+
             <div class="row item">
 
                <div class="twelve columns">
 
                   <h3 class="mx-5"> Harvard University </h3>
-                  <p class="info text-left mx-5">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
-
-                  <p class="text-center mx-5">
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
-                  </p>
+                  <p class="info text-left mx-5">BSc Psychology and Computer Science <span>&bull;</span> <em class="date">April 2002</em></p>
 
                </div>
 
@@ -200,14 +195,41 @@
 
                <div class="twelve columns">
 
-                  <h3 class=" mx-5">School of Cool Designers</h3>
-                  <p class="info mx-5">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
+                  <h3 class=" mx-5 pt-3">Phillips Exeter Academy</h3>
+                  <p class="info mx-5">Classic Studies and Science  <span>&bull;</span> <em class="date">March 1999</em></p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <h1 class=" mx-3 text-center"> WORK EXPERIENCE </h1>
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3 class=" mx-5"> FaceBook </h3>
+                  <p class="info mx-5">Co-Founder and Senior Developer <span>&bull;</span> <em class="date">March 2003 - Present</em></p>
 
                   <p class="mx-5">
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  A social media platform that allows people to communicate across the globe, make friends and social digitally. The platform currently supports
+                  a wide range functions. These are messaging, video calls, market place where buyers and sellers can have business interactions, dating section among others.
+                  It is still expanding and perfecting the exsiting functions as well.
+                  </p>
+
+               </div>
+
+            </div> <!-- item end --><div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3 class=" mx-5">FaceSmash</h3>
+                  <p class="info mx-5">Developer <span>&bull;</span> <em class="date">March 2002 - February 2003 </em></p>
+
+                  <p class="mx-5">
+                  A social website that allows users to compare two student pictures side by side and let them decide or choose who is "hot"
+                  or who is "not". The website had about 450 visits on the first day voting about 22,000 times. This in the end overloaded the
+                  Havard network leading to the site being shut down.
                   </p>
 
                </div>
